Add a local_uri key to the delegate script context